@@ -9,11 +9,13 @@ v0.0.4alpha (unreleased)
   * Favour of object currently carried is indicated next to favour bars.
   * Can set sound volume and window size in options.
   * Added spawning (how could I not have put it in yet?) and reduced favour value of most objects.
+  * Added level under the sea (reused volcano god, though, until unique one created)
   * Added level in a tech facility (AI _are_ gods, aren't they?)
   * Added level in a desert (reused storm god, though, until unique one created)
-  * Added level on a moon (reused volcano god, though, until unique one created)
-  * Network stats overlay (Ctrl-N)
+  * Added level on a moon with meteors.
+  * Network stats overlay (Ctrl-N).
   * FIXED: Poison/growth status effects are not properly synchronised in network play.
+  * Countless other stuff I forgot to write down.
 
 v0.0.3alpha (2011-05-17)
 
